--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
-# $Id: Changes,v 1.2 2002/11/25 20:16:26 comdog Exp $
+# $Id: Changes,v 1.3 2002/11/25 20:25:21 comdog Exp $
 
-1.01 - Mon Nov 25 14:13:30 CST 2002
+1.02 - Mon Nov 25 14:13:30 CST 2002
 	+ this is the first release as a separate module
 	+ added additional publishers (4xxx) for english countries
+
+1.03 - Mon Nov 25 14:24:58 CST 2002
+	+ fixed Makefile to install in right place
