Import of BDFOY/Business-ISBN-Data-1.13 from CPAN.
gitpan-cpan-distribution: Business-ISBN-Data
gitpan-cpan-version:      1.13
gitpan-cpan-path:         BDFOY/Business-ISBN-Data-1.13.tar.gz
gitpan-cpan-author:       BDFOY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,4 +1,12 @@
-# $Id: Changes,v 1.14 2007/01/10 03:46:46 comdog Exp $
+# $Id: Changes,v 1.16 2007/01/10 05:12:48 comdog Exp $
+
+1.13 - Tue Jan  9 23:12:56 2007
+	* updated copyright and license info
+	* no code changes, so no need to upgrade
+
+1.12 - Tue Jan  9 23:11:33 2007
+	* updated copyright and license info
+	* no code changes, so no need to upgrade
 
 1.12 - Tue Jan  9 21:46:19 2007
 	* updated copyright and license info
