--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 # $Id: Changes,v 1.20 2007/10/27 18:47:18 comdog Exp $
 
+0.00 - Mon Jul 23 12:59:52 2012
+	* Daniel Jakubik updated the data for July 18, 2012
+
 0.00 - Fri Dec  5 12:00:41 2008
 	* Latest data update.
 
