--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@
 	* Support data from RangeMessage.xml. You can use the latest
 	data from ISBN without updating this module.
 
+20120719.01 - Thu Jul 26 08:57:14 2012
+	Specify the Test::More version so I cna use subtest.
+	No code or feature changes
+
 20120718 - Mon Jul 23 12:59:52 2012
 	* Daniel Jakubik updated the data for July 18, 2012
 
@@ -31,10 +35,6 @@
 	* no code changes, so no need to upgrade
 
 1.12 - Tue Jan  9 23:11:33 2007
-	* updated copyright and license info
-	* no code changes, so no need to upgrade
-
-1.12 - Tue Jan  9 21:46:19 2007
 	* updated copyright and license info
 	* no code changes, so no need to upgrade
 
